--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,5 @@
 /* set fonts */
-$main-font: "Roboto Regular";
-$secundary-font: "Roboto Bold";
+$main-font: 'Roboto', sans-serif;
 
 /* set colors */
 $white: #fff;
@@ -16,6 +15,4 @@ $green-product: #4caf50;
 $blue-product : #3f51b5;
 $purple-product: #4a148c;
 
-$heading-font: "Roboto-Bold";
-$text-font: "Roboto-Regular";
 $material-font : "Material Icons";
