--- a/scss/site/_nav.scss
+++ b/scss/site/_nav.scss
@@ -30,7 +30,8 @@ nav {
             color: $text-field !important;
             padding-bottom: 15px;
             font-size: 18px;
-            font-family: $text-font;
+            font-weight: bold;
+            
         }
     }
 }
