--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,5 +16,7 @@
 @import "site/footer";
 @import "site/bonus_services";
 
+@import "modal/modal";
+
 @import "sm_xs_devices";
 @import "md_devices";
