--- a/scss/site/_body.scss
+++ b/scss/site/_body.scss
@@ -1,3 +1,12 @@
+body, p {
+    font-family: $main-font !important;
+}
+
+h1, .heading, .list-heading, .effit, .price-text, .with-dph {
+    font-family: $main-font !important;
+    font-weight: bold !important;  
+}
+
 .green {
     color: $green-product;
 }
