--- a/scss/site/_bonus_services.scss
+++ b/scss/site/_bonus_services.scss
@@ -4,18 +4,17 @@
     h1 {
         margin-top: 0px;
         color: $text-field;
-        font-family: $heading-font;
+        
     }
     
-    p {
+    .heading {
         padding-top: 50px;
         color: $text-field;
-        font-family: $heading-font;
         font-size: 18px;
     }
     
     .bonus-services-list {
-        font-family: $text-font;
+        
         color: $text-field-light;
         padding-left: 15px;
         padding-bottom: 50px;
@@ -27,7 +26,7 @@
         height: 45px;
         width: 237px;
         margin-bottom: 50px;
-        font-family: $heading-font;
+        
     }
     
     img {
