--- a/scss/site/_header.scss
+++ b/scss/site/_header.scss
@@ -1,40 +1,3 @@
-nav {
-    height: 70px;
-    padding-bottom: 0px !important;
-    padding-top: 0px !important;
-    -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
-    
-    .navbar-brand {
-        margin-right: 100px;
-    }
-    
-    a {
-        text-decoration: none !important;
-    }
-    
-    .navbar-nav .mdl-button--red {
-        margin-bottom: 20px;
-    }
-    
-    .active {
-        border-bottom: 3px solid $red;
-    }
-    
-    .nav-item {
-        margin-top: 20px;
-        margin-right: 50px;
-        
-        .nav-link {
-            color: $text-field !important;
-            padding-bottom: 15px;
-            font-size: 18px;
-            font-family: $text-font;
-        }
-    }
-}
-
 .hero {
     height: 980px;
     background: url('../assets/img/hero.jpg');
@@ -45,17 +8,18 @@ nav {
     h1 {
         padding-top: 230px;
         margin-bottom: 55px;
-        font-family: $heading-font;
+        
+        font-weight: bold;
     }
     
     p {
         font-size: 18px;
         margin-bottom: 55px;
-        font-family: $text-font;
+        
     }
     
     .mdl-button--red {
-        font-family: $heading-font;
+        
         width: 300px;
         height: 55px;
         font-size: 20px;
@@ -69,7 +33,8 @@ nav {
         padding-left: 56px;
         padding-right: 56px;
         height: 40px;
-        font-family: $heading-font;
+        font-weight: bold;
+        
         margin-bottom: 110px;
     }
     
@@ -88,6 +53,8 @@ nav {
             text-align: center;
             line-height: 0px;
             border-radius: 50%;
+            
+            font-weight: bold;
             border: 2px solid rgba(255,255,255,0.30);
 
             .text {
