--- a/scss/site/_nav.scss
+++ b/scss/site/_nav.scss
@@ -31,7 +31,8 @@ nav {
             padding-bottom: 15px;
             font-size: 18px;
             font-weight: bold;
-            
+            font-family: $main-font !important;
+            font-weight: bold !important;  
         }
     }
 }
