--- a/scss/site/_products.scss
+++ b/scss/site/_products.scss
@@ -96,6 +96,7 @@
             }
             
             .product-price {
+                font-weight: bold;
                 font-size: 22px;
                 margin-bottom: 50px;
             }
