add circle number in advantages section

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -275,6 +275,13 @@ footer .copy {
     padding-bottom: 30px !important;
     font-size: 19px;
   }
+  .advantages .advantages-list li {
+    display: flow-root;
+  }
+  .advantages .advantages-list li::before {
+    content: "";
+    display: none;
+  }
   .spectrum {
     padding-top: 15px;
     height: 620px;
