--- a/scss/site/_advantages.scss
+++ b/scss/site/_advantages.scss
@@ -25,5 +25,28 @@
             
         }
     }
+
+    .advantages-list li {
+        display: -webkit-box;
+    }
+
+    .advantages-list li:before {
+        counter-increment: section;
+        content: counter(section);
+        
+        margin-right: 15px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 100%;
+        text-align: center;
+        font-size: 14px;
+        margin-top: 10px;
+        padding: 10px;
+        display: flex;
+        height: 20px;
+        width: 20px;
+        color: white;
+        background-color: #f44336;
+    }
         
 }
