--- a/scss/site/_advantages.scss
+++ b/scss/site/_advantages.scss
@@ -46,7 +46,7 @@
         height: 20px;
         width: 20px;
         color: white;
-        background-color: #f44336;
+        background-color: $red;
     }
         
 }
