--- a/css/modal.css
+++ b/css/modal.css
@@ -29,174 +29,70 @@
   height: 60px;
 }
 
-nav {
-  height: 70px;
-  padding-bottom: 0px !important;
-  padding-top: 0px !important;
-  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+.contactus-modal {
+  background-color: #fff;
 }
 
-nav .navbar-brand {
-  margin-right: 100px;
-}
-
-nav a {
-  text-decoration: none !important;
-}
-
-nav .navbar-nav .mdl-button--red {
-  margin-bottom: 20px;
-}
-
-nav .active {
-  border-bottom: 3px solid #f44336;
-}
-
-nav .nav-item {
-  margin-top: 20px;
-  margin-right: 50px;
-}
-
-nav .nav-item .nav-link {
-  color: #455a64 !important;
-  padding-bottom: 15px;
-  font-size: 18px;
+.contactus-modal h1 {
+  color: #455a64;
   font-weight: bold;
-  font-family: "Roboto", sans-serif !important;
-  font-weight: bold !important;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
-.gdpr {
-  padding-top: 150px;
-}
-
-.gdpr h1 {
-  margin-top: 0px;
-  color: #455a64;
-  margin-bottom: 80px;
-}
-
-.gdpr .subheading {
-  font-size: 24px;
-  color: #455a64;
-}
-
-.gdpr .text {
-  font-size: 18px;
-  color: #90a4ae;
-  margin-bottom: 80px;
-}
-
-.gdpr .note .text {
-  padding-left: 20px;
-  border-left: 1px solid gray;
-  color: #009688;
-}
-
-.gdpr .note .text span {
-  font-size: 24px;
-}
-
-.gdpr .note .text p {
-  font-size: 18px;
-}
-
-.gdpr .note .text button {
-  text-transform: uppercase;
-  width: 237px;
-  font-size: 14px;
-  height: 45px;
-}
-
-.gdpr .subheading {
-  color: #455a64;
-}
-
-.gdpr .text1, .gdpr .text2, .gdpr .text3 {
+.contactus-modal form {
   color: #90a4ae;
 }
 
-.gdpr .text3 {
-  padding-bottom: 40px;
+.contactus-modal form label {
+  padding-bottom: 30px;
 }
 
-.gdpr .row {
-  padding-top: 20px;
-  text-align: center;
-  padding-bottom: 20px;
-}
-
-.gdpr .row .heading {
-  padding-top: 40px;
-  color: #009688;
-  font-size: 18px;
-}
-
-.gdpr .row p {
-  color: #90a4ae;
-  font-size: 14px;
-  padding-bottom: 40px;
-}
-
-@media (min-width: 763px) and (max-width: 992px) {
-  .gdpr .note button {
-    width: 200px !important;
-  }
-}
-
-@media (max-width: 768px) {
-  .gdpr {
-    padding-top: 80px;
-  }
-  .gdpr h1 {
-    text-align: center;
-    font-size: 34px;
-    margin-bottom: 30px;
-  }
-  .gdpr .note {
-    height: 170px;
-  }
-  .gdpr .note .text {
-    border-left: none;
-    text-align: center;
-  }
-}
-
-footer {
-  background-color: #eeeeee;
-  padding-top: 80px;
-}
-
-footer .usefull {
-  text-align: right;
-}
-
-footer .usefull .heading {
-  font-size: 14px;
-  color: #455a64;
-}
-
-footer .usefull ul {
-  list-style: none;
+.contactus-modal form input[type="text"] {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.87);
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.26);
+  outline: 0;
   padding: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+  font-size: 16px;
+  font-family: inherit;
+  line-height: inherit;
+  background-image: none;
 }
 
-footer .usefull a {
-  color: #90a4ae;
-  padding-right: 0px;
+.contactus-modal form input[type="text"]:focus {
+  color: #009688;
+  border-color: #009688;
+  border-width: 2px;
 }
 
-footer hr {
-  margin-top: 80px;
+.contactus-modal form .conditions {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  display: flex;
 }
 
-footer .copy {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  color: #455a64;
-  text-align: center;
+.contactus-modal form button {
+  margin-top: 65px;
+  margin-bottom: 100px;
+}
+
+.contactus-modal .modal-footer {
+  background-color: #eee;
+}
+
+.contactus-modal .modal-footer .row {
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 @media (max-width: 768px) {
@@ -278,6 +174,13 @@ footer .copy {
     padding-top: 25px !important;
     padding-bottom: 30px !important;
     font-size: 19px;
+  }
+  .advantages .advantages-list li {
+    display: flow-root;
+  }
+  .advantages .advantages-list li::before {
+    content: "";
+    display: none;
   }
   .spectrum {
     padding-top: 15px;
@@ -433,4 +336,4 @@ footer .copy {
     margin-top: 168px;
   }
 }
-/*# sourceMappingURL=gdpr.css.map */
+/*# sourceMappingURL=modal.css.map */
