--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -1,19 +1,67 @@
-.modal-content {
-    display: block;
-    margin: 0 auto;
-    border-radius: 0;
-    border: none;
+.contactus-modal {
+
     background-color: $white;
 
     h1 {
-        text-align: center;
         color: $text-field;
         font-weight: bold;
-        padding-top: 100px;
-        padding-bottom: 100px;
+        margin-top: 100px;
+        margin-bottom: 100px;
     }
 
-    input {
-        margin-bottom: 30px;
+    form {
+        color: $text-field-light;
+
+        label {
+            padding-bottom: 30px;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            display: block;
+            background-color: transparent;
+            color: rgba(0,0,0,.87);
+            border: none;
+            border-bottom: 1px solid rgba(0,0,0,.26);
+            outline: 0;
+            padding: 0;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+            border-radius: 0;
+            font-size: 16px;
+            font-family: inherit;
+            line-height: inherit;
+            background-image: none;
+        }
+
+
+        input[type="text"]:focus {
+            color: $turquoise;
+            border-color: $turquoise;
+            border-width: 2px;
+        }
+
+        .conditions {
+            margin-top: 50px;
+            margin-bottom: 30px;
+            display: flex;
+        }
+
+        button {
+            margin-top: 65px;
+            margin-bottom: 100px;
+        }
+    }
+
+    .modal-footer {
+        background-color: #eee;
+
+        .row {
+            width: 100%;
+            padding-top: 30px;
+            padding-bottom: 30px;
+        }
     }
 }
