--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -1,57 +1,100 @@
+.button-close-modal {
+    color: $text-field !important;
+    top: 30px;
+    background: #eee !important;
+    width: 60px !important;
+    height: 60px !important;
+    left: 30px;
+    position: absolute;
+}
+
+.back {
+    color: $text-field-light;
+    position: absolute;
+    top: 50px;
+    left: 100px;
+    font-size: 18px;
+}
+
 .contactus-modal {
 
+    width: auto;
     background-color: $white;
 
-    h1 {
-        color: $text-field;
-        font-weight: bold;
-        margin-top: 100px;
-        margin-bottom: 100px;
-    }
+    .container {
 
-    form {
-        color: $text-field-light;
-
-        label {
-            padding-bottom: 30px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-            display: block;
-            background-color: transparent;
-            color: rgba(0,0,0,.87);
-            border: none;
-            border-bottom: 1px solid rgba(0,0,0,.26);
-            outline: 0;
-            padding: 0;
-            -webkit-box-shadow: none;
-            box-shadow: none;
-            border-radius: 0;
-            font-size: 16px;
-            font-family: inherit;
-            line-height: inherit;
-            background-image: none;
-        }
-
-
-        input[type="text"]:focus {
-            color: $turquoise;
-            border-color: $turquoise;
-            border-width: 2px;
-        }
-
-        .conditions {
-            margin-top: 50px;
-            margin-bottom: 30px;
-            display: flex;
-        }
-
-        button {
-            margin-top: 65px;
+        h1 {
+            margin-top: 0;
+            color: $text-field;
+            font-weight: bold;
+            padding-top: 100px;
             margin-bottom: 100px;
+            text-align: center;
+        }
+
+        form {
+            color: $text-field-light;
+
+            .form-group {
+                padding-left: 200px;
+                padding-right: 200px;
+            }
+
+            label {
+                font-size: 14px;
+            }
+
+            input[type="text"] {
+                margin-bottom: 30px;
+                width: 100%;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                display: block;
+                background-color: transparent;
+                color: rgba(0,0,0,.87);
+                border: none;
+                border-bottom: 1px solid rgba(0,0,0,.26);
+                outline: 0;
+                padding: 0;
+                -webkit-box-shadow: none;
+                box-shadow: none;
+                border-radius: 0;
+                font-size: 16px;
+                font-family: inherit;
+                line-height: inherit;
+                background-image: none;
+            }
+
+
+            input[type="text"]:focus {
+                color: $turquoise;
+                border-color: $turquoise;
+                border-width: 2px;
+            }
+
+            .conditions {
+                margin-top: 50px;
+                margin-bottom: 30px;
+                display: flex;
+
+                input[type="checkbox"] {
+                    margin-top: 4px;
+                }
+
+                label {
+                    margin-left: 10px;
+                }
+            }
+
+            button {
+                margin-top: 65px;
+                width: 100%;
+                height: 65px;
+                background-color: $turquoise;
+                color: white;
+                font-size: 22px; 
+                margin-bottom: 100px;
+            }
         }
     }
 
@@ -62,6 +105,24 @@
             width: 100%;
             padding-top: 30px;
             padding-bottom: 30px;
+
+            .effit-logo {
+                padding-top: 30px;
+            }
+
+            .bp-logo {
+                padding-top: 15px;
+            }
+
+            li {
+                color: $text-field-light;
+                list-style: none;
+
+                .fa {
+                    margin-right: 15px;
+                }
+            }
+
         }
     }
 }
