--- a/scss/_md_devices.scss
+++ b/scss/_md_devices.scss
@@ -70,6 +70,13 @@
             padding-top: 65px;
         }
     }
+
+    .bonus-services {
+        
+        .heading {
+            padding-left: 55px;
+        }
+    }
     
     .bonus-services img {
         margin-top: 116px;
