--- a/scss/_sm_xs_devices.scss
+++ b/scss/_sm_xs_devices.scss
@@ -178,6 +178,10 @@
                 font-size: 40px;
             }
             
+            span {
+                padding-left: 55px;
+            }
+
             p {
                 padding-left: 40px;
                 padding-top: 15px;
