--- a/css/main.css
+++ b/css/main.css
@@ -750,7 +750,7 @@ footer .copy {
 .contactus-modal .container form button {
   margin-top: 65px;
   width: 100%;
-  height: 65px;
+  height: 50px;
   background-color: #009688;
   color: white;
   font-size: 22px;
@@ -925,6 +925,9 @@ footer .copy {
     text-align: center;
     font-size: 40px;
   }
+  .bonus-services .col-md-6 span {
+    padding-left: 55px;
+  }
   .bonus-services .col-md-6 p {
     padding-left: 40px;
     padding-top: 15px;
@@ -996,6 +999,9 @@ footer .copy {
   }
   .support .heading {
     padding-top: 65px;
+  }
+  .bonus-services .heading {
+    padding-left: 55px;
   }
   .bonus-services img {
     margin-top: 116px;
