--- a/css/modal.css
+++ b/css/modal.css
@@ -118,7 +118,7 @@
 .contactus-modal .container form button {
   margin-top: 65px;
   width: 100%;
-  height: 65px;
+  height: 50px;
   background-color: #009688;
   color: white;
   font-size: 22px;
@@ -293,6 +293,9 @@
     text-align: center;
     font-size: 40px;
   }
+  .bonus-services .col-md-6 span {
+    padding-left: 55px;
+  }
   .bonus-services .col-md-6 p {
     padding-left: 40px;
     padding-top: 15px;
@@ -364,6 +367,9 @@
   }
   .support .heading {
     padding-top: 65px;
+  }
+  .bonus-services .heading {
+    padding-left: 55px;
   }
   .bonus-services img {
     margin-top: 116px;
