--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -374,6 +374,9 @@ footer .copy {
   nav .nav-item {
     margin-right: 0px;
   }
+  .products .content-card {
+    height: auto;
+  }
   .products .content-card .col-md-9 li {
     font-size: 16px;
   }
@@ -398,7 +401,6 @@ footer .copy {
     width: 180px;
   }
   .advantages {
-    height: 450px;
     background-position-x: 65px;
   }
   .advantages .heading {
