--- a/css/gdpr.css
+++ b/css/gdpr.css
@@ -378,6 +378,9 @@ footer .copy {
   nav .nav-item {
     margin-right: 0px;
   }
+  .products .content-card {
+    height: auto;
+  }
   .products .content-card .col-md-9 li {
     font-size: 16px;
   }
@@ -402,7 +405,6 @@ footer .copy {
     width: 180px;
   }
   .advantages {
-    height: 450px;
     background-position-x: 65px;
   }
   .advantages .heading {
