--- a/css/main.css
+++ b/css/main.css
@@ -963,6 +963,9 @@ footer .copy {
   nav .nav-item {
     margin-right: 0px;
   }
+  .products .content-card {
+    height: auto;
+  }
   .products .content-card .col-md-9 li {
     font-size: 16px;
   }
@@ -987,7 +990,6 @@ footer .copy {
     width: 180px;
   }
   .advantages {
-    height: 450px;
     background-position-x: 65px;
   }
   .advantages .heading {
