--- a/css/modal.css
+++ b/css/modal.css
@@ -331,6 +331,9 @@
   nav .nav-item {
     margin-right: 0px;
   }
+  .products .content-card {
+    height: auto;
+  }
   .products .content-card .col-md-9 li {
     font-size: 16px;
   }
@@ -355,7 +358,6 @@
     width: 180px;
   }
   .advantages {
-    height: 450px;
     background-position-x: 65px;
   }
   .advantages .heading {
