--- a/css/modal.css
+++ b/css/modal.css
@@ -152,6 +152,111 @@
   margin-right: 15px;
 }
 
+.buy-product-modal {
+  width: max-content;
+  background-color: #fff;
+}
+
+.buy-product-modal .container h1 {
+  margin-top: 0;
+  color: #455a64;
+  font-weight: bold;
+  padding-top: 100px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+.buy-product-modal .container form {
+  color: #90a4ae;
+}
+
+.buy-product-modal .container form .form-group {
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
+.buy-product-modal .container form label {
+  font-size: 14px;
+}
+
+.buy-product-modal .container form input[type="text"] {
+  margin-bottom: 30px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.87);
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.26);
+  outline: 0;
+  padding: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+  font-size: 16px;
+  font-family: inherit;
+  line-height: inherit;
+  background-image: none;
+}
+
+.buy-product-modal .container form input[type="text"]:focus {
+  color: #009688;
+  border-color: #009688;
+  border-width: 2px;
+}
+
+.buy-product-modal .container form .conditions {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  display: flex;
+}
+
+.buy-product-modal .container form .conditions input[type="checkbox"] {
+  margin-top: 4px;
+}
+
+.buy-product-modal .container form .conditions label {
+  margin-left: 10px;
+}
+
+.buy-product-modal .container form button {
+  margin-top: 65px;
+  width: 100%;
+  height: 50px;
+  background-color: #009688;
+  color: white;
+  font-size: 22px;
+  margin-bottom: 100px;
+}
+
+.buy-product-modal .modal-footer {
+  background-color: #eee;
+}
+
+.buy-product-modal .modal-footer .row {
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.buy-product-modal .modal-footer .row .effit-logo {
+  padding-top: 30px;
+}
+
+.buy-product-modal .modal-footer .row .bp-logo {
+  padding-top: 15px;
+}
+
+.buy-product-modal .modal-footer .row li {
+  color: #90a4ae;
+  list-style: none;
+}
+
+.buy-product-modal .modal-footer .row li .fa {
+  margin-right: 15px;
+}
+
 @media (max-width: 768px) {
   nav {
     height: unset;
