--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -126,3 +126,114 @@
         }
     }
 }
+
+.buy-product-modal {
+
+    width: max-content;
+    background-color: $white;
+
+    .container {
+
+        h1 {
+            margin-top: 0;
+            color: $text-field;
+            font-weight: bold;
+            padding-top: 100px;
+            margin-bottom: 100px;
+            text-align: center;
+        }
+
+        form {
+            color: $text-field-light;
+
+            .form-group {
+                padding-left: 200px;
+                padding-right: 200px;
+            }
+
+            label {
+                font-size: 14px;
+            }
+
+            input[type="text"] {
+                margin-bottom: 30px;
+                width: 100%;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                display: block;
+                background-color: transparent;
+                color: rgba(0,0,0,.87);
+                border: none;
+                border-bottom: 1px solid rgba(0,0,0,.26);
+                outline: 0;
+                padding: 0;
+                -webkit-box-shadow: none;
+                box-shadow: none;
+                border-radius: 0;
+                font-size: 16px;
+                font-family: inherit;
+                line-height: inherit;
+                background-image: none;
+            }
+
+
+            input[type="text"]:focus {
+                color: $turquoise;
+                border-color: $turquoise;
+                border-width: 2px;
+            }
+
+            .conditions {
+                margin-top: 50px;
+                margin-bottom: 30px;
+                display: flex;
+
+                input[type="checkbox"] {
+                    margin-top: 4px;
+                }
+
+                label {
+                    margin-left: 10px;
+                }
+            }
+
+            button {
+                margin-top: 65px;
+                width: 100%;
+                height: 50px;
+                background-color: $turquoise;
+                color: white;
+                font-size: 22px; 
+                margin-bottom: 100px;
+            }
+        }
+    }
+
+    .modal-footer {
+        background-color: #eee;
+
+        .row {
+            width: 100%;
+            padding-top: 30px;
+            padding-bottom: 30px;
+
+            .effit-logo {
+                padding-top: 30px;
+            }
+
+            .bp-logo {
+                padding-top: 15px;
+            }
+
+            li {
+                color: $text-field-light;
+                list-style: none;
+
+                .fa {
+                    margin-right: 15px;
+                }
+            }
+
+        }
+    }
+}
