functions section have now text-owerflow style

--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -143,6 +143,11 @@
             text-align: center;
         }
 
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+
         form {
             color: $text-field-light;
 
