--- a/scss/_md_devices.scss
+++ b/scss/_md_devices.scss
@@ -63,6 +63,10 @@
             display: table;
             margin: 0 auto;
         }
+
+        .circles {
+            display: none;
+        }
     }
 
     .support {
