visual issue fix

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -90,6 +90,7 @@ nav .nav-item .nav-link {
 }
 
 .aboutus .note .text {
+  text-align: center;
   padding-left: 20px;
   border-left: 1px solid gray;
   color: #009688;
