--- a/scss/aboutus/_aboutus.scss
+++ b/scss/aboutus/_aboutus.scss
@@ -23,6 +23,7 @@
 
     .note {
         .text {
+            text-align: center;
             padding-left: 20px;
             border-left: 1px solid gray;
             color: $turquoise;
