--- a/scss/modal/_modal.scss
+++ b/scss/modal/_modal.scss
@@ -33,7 +33,7 @@
         }
 
         form {
-            color: $text-field-light;
+            color: $text-field;
 
             .form-group {
                 padding-left: 200px;
@@ -129,10 +129,14 @@
 
 .buy-product-modal {
 
+    padding-bottom: 30px;
     width: max-content;
     background-color: $white;
 
     .container {
+
+        padding-left: 30px;
+        padding-right: 30px;
 
         h1 {
             margin-top: 0;
@@ -149,7 +153,7 @@
         }
 
         form {
-            color: $text-field-light;
+            color: $text-field;
 
             .form-group {
                 padding-left: 200px;
@@ -201,44 +205,100 @@
                     margin-left: 10px;
                 }
             }
-
-            button {
-                margin-top: 65px;
-                width: 100%;
-                height: 50px;
-                background-color: $turquoise;
-                color: white;
-                font-size: 22px; 
-                margin-bottom: 100px;
-            }
         }
-    }
 
-    .modal-footer {
-        background-color: #eee;
 
-        .row {
-            width: 100%;
-            padding-top: 30px;
-            padding-bottom: 30px;
+        .subheading {
+            font-size: 18px;
+            text-transform: capitalize;
+        }
 
-            .effit-logo {
-                padding-top: 30px;
+        .selected-product {
+            display: flex;
+
+            .selected-text {
+                font-size: 22px;
             }
 
-            .bp-logo {
-                padding-top: 15px;
-            }
+            .change-wrapper {
+                margin: 0 auto;
 
-            li {
-                color: $text-field-light;
-                list-style: none;
-
-                .fa {
-                    margin-right: 15px;
+                .change {
+                    float: right;
+                    text-transform: uppercase;
+                    color: $red;
                 }
             }
+        }
 
+        .price, .pref {
+            color: $text-field-light;
+        }
+
+        .card {
+            margin-left: 5px;
+            margin-top: 10px;
+            margin-bottom: 15px;
+            -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+            -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+            box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.25);
+            
+            .card-content {
+                padding: 15px;
+
+                .heading-red {
+                    color: $red;
+                }
+
+                .text {
+                    color: $text-field;
+                }
+
+                .text-gray {
+                    color: $text-field;
+                }
+            }
+        }
+
+        .payment-block {
+            margin-top: 20px;
+            background-color: #ebeaea;
+            padding: 25px; 
+            color: $text-field;
+
+            .container {
+                padding-left: 15px;
+                padding-right: 15px;
+
+                .discount, .red {
+                    color: $red;
+                }
+
+                .line-through {
+                    text-decoration: line-through;
+                }
+
+                button {
+                    text-transform: initial;
+                    width: 100%;
+                    height: 60px;
+
+                    .fa {
+                        font-size: 22px;
+                    }
+                }
+            }
+        }
+
+        .checkboxs {
+
+            label {
+                color: $text-field-light !important;
+            }
+        }
+
+        p {
+            color: $text-field-light;
         }
     }
 }
