--- a/scss/site/_nav.scss
+++ b/scss/site/_nav.scss
@@ -16,6 +16,7 @@ nav {
     
     .navbar-nav .mdl-button--red {
         margin-bottom: 20px;
+        font-weight: bold;
     }
     
     .active {
