--- a/scss/site/_header.scss
+++ b/scss/site/_header.scss
@@ -23,6 +23,7 @@
         width: 300px;
         height: 55px;
         font-size: 20px;
+        font-weight: bold;
         margin-bottom: 55px;
     }
     
