some bug fixing

--- a/scss/_sm_xs_devices.scss
+++ b/scss/_sm_xs_devices.scss
@@ -151,6 +151,14 @@
         padding-top: 0px !important;
     }
 
+    .collapse-card .col-md-5 {
+        display: none;
+    }
+
+    .card-body img {
+        margin-bottom: 35px;
+    }
+
     .collapse-card-text {
         padding-left: 30px;
     }
