--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -48,6 +48,7 @@ nav a {
 
 nav .navbar-nav .mdl-button--red {
   margin-bottom: 20px;
+  font-weight: bold;
 }
 
 nav .active {
@@ -315,6 +316,12 @@ footer .copy {
   }
   .functions-content {
     padding-top: 0px !important;
+  }
+  .collapse-card .col-md-5 {
+    display: none;
+  }
+  .card-body img {
+    margin-bottom: 35px;
   }
   .collapse-card-text {
     padding-left: 30px;
