--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ nav a {
 
 nav .navbar-nav .mdl-button--red {
   margin-bottom: 20px;
+  font-weight: bold;
 }
 
 nav .active {
@@ -121,6 +122,7 @@ nav .nav-item .nav-link {
   width: 300px;
   height: 55px;
   font-size: 20px;
+  font-weight: bold;
   margin-bottom: 55px;
 }
 
@@ -541,8 +543,14 @@ nav .nav-item .nav-link {
   overflow: hidden;
 }
 
-.functions .functions-content .collapse-card .preparing {
+.functions .functions-content .collapse-card .col-md-5 {
+  align-self: center;
+}
+
+.functions .functions-content .collapse-card .col-md-5 .preparing {
   color: #f44336;
+  font-size: 18px;
+  align-self: center;
 }
 
 .functions .functions-content .collapse-card .images {
@@ -551,10 +559,15 @@ nav .nav-item .nav-link {
 
 .functions .functions-content .collapse-card .images img {
   height: 100px;
+  width: 200px;
   margin-right: 20px;
   -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.25);
+}
+
+.functions .functions-content .collapse-card .card-body ul {
+  color: #90a4ae;
 }
 
 .functions .mdl-button--red {
@@ -1078,6 +1091,12 @@ footer .copy {
   }
   .functions-content {
     padding-top: 0px !important;
+  }
+  .collapse-card .col-md-5 {
+    display: none;
+  }
+  .card-body img {
+    margin-bottom: 35px;
   }
   .collapse-card-text {
     padding-left: 30px;
