--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,8 +5,8 @@ $main-font: 'Roboto', sans-serif;
 $white: #fff;
 $red: #f44336;
 $text-field: #455a64;
-$text-field-light: #90a4ae;
-$grey: #949493;
+$text-field-light: #455a64;
+$grey: #c2c2c2;
 $yellow: #ffc108;
 $turquoise: #009688;
 $turquoise-half-transparent: rgba(0, 150, 136, 0.5);
