--- a/scss/aboutus/_aboutus.scss
+++ b/scss/aboutus/_aboutus.scss
@@ -43,6 +43,7 @@
                 text-transform: uppercase;
                 width: 237px;
                 font-size: 14px;
+                font-weight: bold;
                 height: 45px;
             }
         }
