--- a/scss/gdpr/_gdpr.scss
+++ b/scss/gdpr/_gdpr.scss
@@ -44,6 +44,7 @@
                 width: 237px;
                 font-size: 14px;
                 height: 45px;
+                font-weight: bold;
             }
         }
     }
