--- a/scss/site/_bonus_services.scss
+++ b/scss/site/_bonus_services.scss
@@ -25,6 +25,7 @@
         color: $text-field;
         height: 45px;
         width: 237px;
+        font-weight: bold;
         margin-bottom: 50px;
         
     }
