--- a/scss/site/_products.scss
+++ b/scss/site/_products.scss
@@ -110,6 +110,7 @@
                 height: 65px;
                 width: 250px;
                 margin-bottom: 140px;
+                font-weight: bold;
             }
         }
     }
