--- a/scss/site/_spectrum.scss
+++ b/scss/site/_spectrum.scss
@@ -139,6 +139,7 @@
             text-transform: uppercase;
             
             margin-bottom: 140px;
+            font-weight: bold;
         }
     }
 }
