--- a/scss/site/_support.scss
+++ b/scss/site/_support.scss
@@ -26,6 +26,7 @@
         padding-left: 56px;
         padding-right: 56px;
         height: 40px;
+        font-weight: bold;
         display: block;
         margin: 0 auto;
         
