--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -48,6 +48,7 @@ nav a {
 
 nav .navbar-nav .mdl-button--red {
   margin-bottom: 20px;
+  font-weight: bold;
 }
 
 nav .active {
@@ -85,7 +86,7 @@ nav .nav-item .nav-link {
 
 .aboutus .text {
   font-size: 18px;
-  color: #90a4ae;
+  color: #455a64;
   margin-bottom: 80px;
 }
 
@@ -108,6 +109,7 @@ nav .nav-item .nav-link {
   text-transform: uppercase;
   width: 237px;
   font-size: 14px;
+  font-weight: bold;
   height: 45px;
 }
 
@@ -123,7 +125,7 @@ nav .nav-item .nav-link {
 .aboutus .contact-text .row {
   padding-top: 30px;
   font-size: 14px;
-  color: #90a4ae;
+  color: #455a64;
 }
 
 .aboutus .contact-text .row .fa {
@@ -181,7 +183,7 @@ footer .usefull ul {
 }
 
 footer .usefull a {
-  color: #90a4ae;
+  color: #455a64;
   padding-right: 0px;
 }
 
