--- a/scss/site/_functions.scss
+++ b/scss/site/_functions.scss
@@ -77,6 +77,7 @@
         margin: 0 auto;
         font-size: 22px;
         margin-top: 50px;
+        font-weight: bold;
         margin-bottom: 140px;
     }
 
